Developing the unique TimeChain converter